--- a/2048-SFML/2048-SFML.vcxproj
+++ b/2048-SFML/2048-SFML.vcxproj
@@ -80,12 +80,13 @@ xcopy /y "$(SolutionDir)assets\*" "$(OutDir)"</Command>
       <AdditionalIncludeDirectories>E:\SFML-2.1%28vs2012%29\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>E:\SFML-2.1%28vs2012%29\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>sfml-main.lib;sfml-graphics.lib;sfml-window.lib;sfml-system.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <EntryPointSymbol>mainCRTStartup</EntryPointSymbol>
     </Link>
     <PostBuildEvent>
       <Command>xcopy /y "$(SolutionDir)libs\*.dll" "$(OutDir)"
